--- a/src/style/components/_product-block.scss
+++ b/src/style/components/_product-block.scss
@@ -13,11 +13,11 @@
   position: relative;
   z-index: 0;
   transition: all 0.2s ease-in-out;
-
-  &:hover {
-    transform: scale(1.03);
+  @media (min-width: 850px) {
+    &:hover {
+      transform: scale(1.03);
+    }
   }
-
   &__image {
     height: 290px;
     max-width: 234px;
